@@ -1,3 +1,7 @@
+1999-08-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* find_executable.c (find_executable): Avoid use of strdup.
+
 1999-07-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* misc.h (MAX_ALIGNMENT): New macro.
